Updated API and POC
Big update on POC allowing it to communicate with the API and small update on API to make it better .
